tests/baselines/reference/override6.errors.txt
tests/cases/conformance/override/override6.ts(9,12): error TS4113: This member must have an 'override' modifier because it overrides a member in the base class 'B'.


==== tests/cases/conformance/override/override6.ts (1 errors) ====
    class B {
        public baz: number = 1;
        constructor(public foo: string, public bar: number) {
    
        }
    }
    
    class D extends B {
        public bar: number = 1
               ~~~
!!! error TS4113: This member must have an 'override' modifier because it overrides a member in the base class 'B'.
        constructor(public foo: string, public baz: number) {
            super(foo, 42)
        }
    }
    